# cats

./: .ghci  CHANGES.md  LICENSE  README.md  cats.cabal  stack.yaml
.github/workflows/: ci.yml
src/: CCC.hs  Matrix.hs  Tree.hs
