name:          cats
version:       0.0.1
synopsis:      Musings on category theory
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2018
homepage:      https://github.com/snowleopard/cats
category:      Categories
build-type:    Simple
cabal-version: >=1.18
tested-with:   GHC==8.4.4
stability:     experimental
description:   Musings on category theory

extra-doc-files:
    README.md

source-repository head
    type:     git
    location: https://github.com/snowleopard/cats.git

library
    hs-source-dirs:     src
    exposed-modules:    Data.Functor.United
                      , Data.Monoid.United
                      , Data.Monoid.United.Language
    build-depends:      base >= 4.7 && < 5
    default-language:   Haskell2010
    GHC-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
