name:          cats
version:       0.0.1
synopsis:      Musings on category theory
license:       MIT
license-file:  LICENSE
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2018-2022
homepage:      https://github.com/snowleopard/cats
bug-reports:   https://github.com/snowleopard/cats/issues
category:      Categories
build-type:    Simple
cabal-version: >=1.18
tested-with:   GHC==9.2, GHC==9.0, GHC==8.10
description:   Musings on category theory and functional programming

extra-doc-files:
    CHANGES.md
    README.md

source-repository head
    type:     git
    location: https://github.com/snowleopard/cats.git

library
    hs-source-dirs:     src
    exposed-modules:    CCC,
                        Matrix,
                        Tree
    build-depends:      base >= 4.7 && < 5
    default-language:   Haskell2010
    ghc-options:        -Wall
                        -fno-warn-name-shadowing
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
